Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,7 @@
         <title>My First View!!</title>
     </head>
     <body>
-        <p>97 Bowling Alley Lane, Boulder CO</p>
+        <h1>Hello World</h1>
+        <p>This HTML code is inside of a '.erb' file in the views directory, where it belongs.</p>
     </body>
 </html>
